# celestia

./: acinclude.m4  celestia 1.6.1 download  celestia.cfg  configure.in
admin/: acinclude.m4.in  libtool.m4.in
data/: Makefile.am
src/celestia/: Makefile.am  celestia.desktop
src/celestia/gtk/data/: celestia.desktop
src/celestia/kde/data/: celestia.desktop
src/celmath/: mathlib.h
